# Watson

./: .env.example  .gitignore  README.md  api.py  app.py  build.bat  cleanup.bat  cleanup.sh  config.py  index.py  pyproject.toml  requirements.txt  service.py  start.bat  start.sh  stop.bat  stop.sh  supervisord.conf  task_progress.md  watson.spec
docs/: api-reference.md  configuration.md  database-indexing.md  installation.md  integration.md  project-structure.md
ingestion/: db_loader.py  embeddings.py  indexer.py  loader.py  splitter.py
llm/: ollama_client.py
rag/: chatbot.py  prompt.py  reranker.py  retriever.py
tests/: conftest.py  test_api.py  test_chatbot.py  test_db_loader.py  test_embeddings.py  test_indexer.py  test_loader.py  test_ollama_client.py  test_prompt.py  test_retriever.py  test_splitter.py
utils/: logger.py
